<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@mipmap/ic_background"
    android:gravity="center_horizontal"
    tools:context=".MainFragment">

    <EditText
        android:id="@+id/edFirstName"
        android:layout_marginTop="15dp"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_firstname"
        android:background="@drawable/style_edit_text"/>

    <EditText
        android:id="@+id/edLastName"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_lastname"
        android:layout_marginTop="15dp"
        android:background="@drawable/style_edit_text"/>

    <EditText
        android:id="@+id/edAge"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_age"
        android:inputType="number"
        android:layout_marginTop="15dp"
        android:background="@drawable/style_edit_text"/>

    <EditText
        android:id="@+id/edAddress"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_address"
        android:layout_marginTop="15dp"
        android:background="@drawable/style_edit_text"/>

    <EditText
        android:id="@+id/edHeight"
        android:layout_width="250dp"
        android:inputType="numberDecimal"
        android:layout_height="wrap_content"
        android:hint="@string/enter_height"
        android:layout_marginTop="15dp"
        android:background="@drawable/style_edit_text"/>

    <EditText
        android:id="@+id/edProfile"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_profile"
        android:layout_marginTop="15dp"
        android:background="@drawable/style_edit_text"/>

    <EditText
        android:id="@+id/edId"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_id"
        android:inputType="number"
        android:layout_marginTop="15dp"
        android:background="@drawable/style_edit_text"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnWrite"
            android:layout_width="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/style_button"
            android:layout_height="wrap_content"
            android:text="@string/write"/>

        <Button
            android:id="@+id/btnRead"
            android:layout_marginTop="15dp"
            android:background="@drawable/style_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/read"/>


    </LinearLayout>



</LinearLayout>